# manager_anycubic_cloud

./: .gitignore  ANALYSE_METRIC.md  PLAN_MISE_EN_PLACE.md  PLAN_OPTIMISATION.md  RESTE_A_FAIRE.md  agents.md  pyproject.toml  readme.md  start.sh
accloud/: __init__.py  api.py  client.py  config.py  endpoints.py  models.py  session_store.py  utils.py
accloud_core/: __init__.py  api.py  cache_store.py  client.py  config.py  endpoints.py  errors.py  logging_contract.py  models.py  session_store.py  utils.py
app_gui_qt/: __init__.py  app.py  qt_compat.py  theme.py
docs/: 00_READ_ORDER.md  00_SCOPE_AND_PIPELINE.md  01_CONTAINER_SPEC.md  01_GLOBAL_CONVENTIONS.md  02_REPO_LAYOUT.md  02_STRUCTS.md  05_PW0IMG_RLE_SPEC.md  07_DECODING_CONTRACTS.md  10_ACLOUD_CONNECTION_SPEC.md  10_REFACTOR_GUIDE.md  11_ACLOUD_HAR_TOKEN_EXTRACTION_SPEC.md  12_ACLOUD_SESSION_JSON_SPEC.md  12_GPU_GEOMETRY_AND_BUFFERS_SPEC.md  13_ACLOUD_ENDPOINTS_CATALOG.md  14_ACLOUD_ENDPOINT_RESPONSES_INTERPRETATION.md  15_ACLOUD_ENDPOINT_JSON_FULL_PAYLOADS_SPEC.md  22_CACHE_INVALIDATION_KEYS.md  22_PWMB_STRUCTS.md  23_HAR_TOKEN_EXTRACTION_SPEC.md  23_PWMB_LAYERDEF_SPEC.md  24_ANYCUBIC_CLOUD_CONNECTION_SPEC.md  24_PWMB_LAYER_IMAGE_COLOR_TABLE_SPEC.md  25_SESSION_JSON_CREATION_SPEC.md  26_PWMB_PWSIMG_RLE_SPEC.md  27_ENDPOINT_RESPONSES_INTERPRETATION_SPEC.md  28_FILES_TAB_BUTTONS_SPEC.md  28_RASTER_AND_AXIS_CONVENTIONS.md  29_ENDPOINT_JSON_FULL_PAYLOADS_SPEC.md  29_TEST_VECTORS.md  30_3D_RENDERING_SPEC.md  30_PRINTER_TAB_BUTTONS_SPEC.md  31_GPU_RENDERER_ARCHITECTURE.md  33_GPU_VISIBILITY_SORTING_SPEC.md  34_CPU_MULTITHREAD_BUILD_SPEC.md  35_ASYNC_ORCHESTRATION_AND_CANCELLATION.md  36_GPU_UPLOAD_RULES.md  37_PERF_INSTRUMENTATION_GPU_CPU.md  38_GPU_DRAW_PIPELINE.md  40_update_to_cpp.md  41_LOT_A_BASELINE.md  (+15 more)
gui/: app.py  state.py  theme.py
pwmb/: __init__.py  container.py  decode_pw0.py  decode_pws.py  export.py  lut.py  structs.py  types.py
pwmb3d/: __init__.py  cache.py  contours.py  geometry_v2.py  task_runner.py
pwmb_core/: __init__.py  container.py  decode_pw0.py  decode_pws.py  export.py  lut.py  structs.py  types.py
pwmb_geom/: __init__.py
pwmb_geom_cpp/: CMakeLists.txt  README.md
pwmb_geom_cpp/include/pwmb_geom/: extract_polygons.hpp  triangulate.hpp
pwmb_geom_cpp/src/: extract_polygons.cpp  module.cpp  triangulate.cpp
render3d_core/: __init__.py  backend.py  cache.py  contours.py  geometry_v2.py  invariants.py  measurement_protocol.py  parallel_policy.py  perf.py  pipeline.py  task_runner.py  types.py
reports/: lot_h_gui_cancel_restart_results.json  lot_h_gui_cancel_restart_results_native.json  rapport_uvtools_pwmb_analyse.md  render3d_campaign_cpp_native_z1_xy1.json  render3d_campaign_cpp_native_z1_xy1_maxW.json  render3d_campaign_cpp_native_z1_xy1_maxW_cube.json  render3d_campaign_cpp_native_z1_xy1_maxW_raven12.json  render3d_campaign_cpp_native_z1_xy1_maxW_raven19.json  render3d_campaign_cpp_native_z4.json  render3d_campaign_cpp_native_z4_autoW.json  render3d_campaign_cpp_native_z4_lotE.json  render3d_campaign_cpp_native_z4_lotF.json  render3d_campaign_cpp_native_z4_lotG.json  render3d_campaign_cpp_native_z4_maxW.json  render3d_campaign_cpp_opencv_tc89_kcos_z4_lotK4.json  render3d_campaign_cpp_opencv_tc89_l1_z4_lotK4.json  render3d_campaign_cpp_opencv_z1_xy1.json  render3d_campaign_cpp_opencv_z1_xy1_maxW.json  render3d_campaign_cpp_opencv_z1_xy1_maxW_cube.json  render3d_campaign_cpp_opencv_z1_xy1_maxW_raven12.json  render3d_campaign_cpp_opencv_z1_xy1_maxW_raven19.json  render3d_campaign_cpp_opencv_z4.json  render3d_campaign_cpp_opencv_z4_autoW.json  (+28 more)
tests/: README.md
(+83 files in other folders)
